--- a/GameConsole/GameConsole.csproj
+++ b/GameConsole/GameConsole.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiamondSkinDefense.cs" />
+    <Compile Include="IronBonesDefense.cs" />
     <Compile Include="PlayerCharacter.cs" />
     <Compile Include="PlayerDisplayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecialDefence.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
